--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@
 # this changes your tmux prefix from CTRL-b to CTRL-a, the reason being that 
 # CTRL-a is not as hard to hit as CTRL-B. any references to CTRL-b or ^b should
 # be interpreted as CTRL-a
-unbind C-b
+unbind-key C-b
 set -g prefix C-a
 bind a send-prefix
 
@@ -40,11 +40,12 @@ bind -n S-Right next-window
 set -sg escape-time 0
 
 # comment this out if linux
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 # unbind -T copy-mode-vi Enter
 # bind-key -T copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
@@ -62,12 +63,12 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Choose session
 bind-key S choose-session 
 
-# Plugins
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
@@ -82,7 +83,7 @@ set -g @continuum-boot-options 'iterm,fullscreen'
 set -g @resurrect-capture-pane-contents 'off'
 
 # https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
-set -g escape-time 10
+# set -g escape-time 10
 # set -g default-terminal "screen-256color"
 # 24 bit color ( true color )
 # set -g default-terminal "tmux-256color"
